--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="wrapper">
+    <div class="container">
+      <div class="todo__inner">
+        <div class="todo__box-title">
+          <h1 class="todo__title">todo</h1>
+          <img src="img/icon-sun.svg" alt="Sun">
+        </div>
+        <div class="todo__lebal-box">
+          <label class="todo__label" for="">
+            <input class="todo__input" type="text" id="input" placeholder="Введите задачу">
+            <button class="todo__btn">Добавить</button>
+          </label>
+        </div>
+        <div class="todo__list-wrapper">
+          <ul class="todo__list">
+            <!-- <li class="todo__list-item">
+              <span></span>
+              <div class="todo__item-circle"></div>
+              <div class="circle-active"></div>
+              <p class="todo__item-value">Купить хлеб</p>
+            </li> -->
+          </ul>
+          <div class="todo-footer">
+            <p class="todo-foote__all-task">
+              Все задачи
+              <span>0</span>
+            </p>
+            <button class="todo-footer__btn">Очистить все</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   
 
 
