--- a/index.html
+++ b/index.html
@@ -24,16 +24,18 @@
         <div class="todo__list-wrapper">
           <ul class="todo__list">
             <!-- <li class="todo__list-item">
-              <span></span>
               <div class="todo__item-circle"></div>
               <div class="circle-active"></div>
               <p class="todo__item-value">Купить хлеб</p>
+              <button class="todo__del-btn"></button>
             </li> -->
           </ul>
-          <div class="todo-footer">
+        </div>
+        <div class="todo-footer">
+          <div class="todo-footer__inner">
             <p class="todo-foote__all-task">
               Все задачи
-              <span>0</span>
+              <span id="span">0</span>
             </p>
             <button class="todo-footer__btn">Очистить все</button>
           </div>
