--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="todo__lebal-box">
           <label class="todo__label" for="">
             <input class="todo__input" type="text" id="input" placeholder="Введите задачу">
-            <button class="todo__btn">Добавить</button>
+            <button class="todo__btn" aria-haspopup="true">Добавить</button>
           </label>
         </div>
         <div class="todo__list-wrapper">
