--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
           <div class="todo-footer__inner">
             <p class="todo-foote__all-task">
               Все задачи
-              <span id="span">0</span>
+              <span id="span-all">0</span>
             </p>
+            <!-- <p class="todo-foote__finish-task">
+              Выполненые
+              <span id="span-fin">0</span>
+            </p> -->
             <button class="todo-footer__btn">Очистить все</button>
           </div>
         </div>
